feat: improve and fix race simulation